[package]
name = "ereactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tokio = ["dep:tokio", "tokio/sync", "tokio/rt"]

[dependencies]
egui = "0.22.0"
log = { version = "0.4.19", default-features = false }
tokio = { version = "1.29.1", optional = true, default-features = false }

[dev-dependencies]
eframe = { version = "0.22.0", default-features = false, features = ["wgpu", "wayland"] }
egui = { version = "0.22.0", features = ["log"] }
env_logger = "0.10.0"
